err/tes-simulation.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/TES_simulation-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tes-simulation'...
Compiling './lib/python3.5/site-packages/tes-simulation/InitializeFx.py'...
***   File "./lib/python3.5/site-packages/tes-simulation/InitializeFx.py", line 38
    print "\nStart simulation at Year 0 if folders do not already exist\n"
                                                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tes-simulation/MiscFx.py'...
***   File "./lib/python3.5/site-packages/tes-simulation/MiscFx.py", line 981
    print "\n\n*** Person ", str(IDD), ": ", Title
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tes-simulation/data'...
Listing './lib/python3.5/site-packages/tes-simulation/examples'...
Listing './lib/python3.5/site-packages/tes-simulation/examples/results_pop_10k'...
Listing './lib/python3.5/site-packages/tes-simulation/examples/results_pop_10k/data'...
Listing './lib/python3.5/site-packages/tes-simulation/examples/results_pop_10k/figs'...
Listing './lib/python3.5/site-packages/tes-simulation/examples/results_pop_10k/figs/CBFS'...
Listing './lib/python3.5/site-packages/tes-simulation/examples/results_pop_10k/figs/County'...
Listing './lib/python3.5/site-packages/tes-simulation/examples/results_pop_10k/figs/County/annimations'...
Listing './lib/python3.5/site-packages/tes-simulation/examples/results_pop_10k/figs/County/hist'...
Listing './lib/python3.5/site-packages/tes-simulation/examples/results_pop_10k/figs/County/plot'...
Listing './lib/python3.5/site-packages/tes-simulation/examples/results_pop_10k/figs/Gov'...
Listing './lib/python3.5/site-packages/tes-simulation/examples/results_pop_10k/figs/LEDDA'...
Listing './lib/python3.5/site-packages/tes-simulation/examples/results_pop_10k/figs/LEDDA/annimations'...
Listing './lib/python3.5/site-packages/tes-simulation/examples/results_pop_10k/figs/LEDDA/hist'...
Listing './lib/python3.5/site-packages/tes-simulation/examples/results_pop_10k/figs/LEDDA/plot'...
Listing './lib/python3.5/site-packages/tes-simulation/examples/results_pop_10k/figs/LEDDA/scatter'...
Listing './lib/python3.5/site-packages/tes-simulation/examples/results_pop_10k/figs/Option_1'...
Listing './lib/python3.5/site-packages/tes-simulation/examples/results_pop_10k/figs/Org'...
Listing './lib/python3.5/site-packages/tes-simulation/examples/results_pop_10k/figs/Persons'...
Listing './lib/python3.5/site-packages/tes-simulation/examples/results_pop_10k/figs/ROC'...
Listing './share'...
Listing './share/python-wheels'...
